# citra

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/citra/: CMakeLists.txt  citra.cpp  config.cpp  default_ini.h
src/citra/emu_window/: emu_window_glfw.cpp  emu_window_glfw.h  stereoscopy-unstable-v1-client-protocol.h  stereoscopy-unstable-v1-protocol.c
src/citra_glfw/: CMakeLists.txt  citra.cpp  config.cpp  config.h  default_ini.h
src/citra_glfw/emu_window/: emu_window_glfw.cpp
src/citra_qt/: bootmanager.cpp  bootmanager.h  config.cpp  game_list.cpp  game_list_p.h  main.cpp
src/common/: emu_window.h  file_util.cpp  file_util.h  hash.h
src/core/: CMakeLists.txt  settings.h
src/core/hle/: shared_page.cpp  svc.cpp
src/core/hle/service/cam/: cam.cpp  cam.h  cam_u.cpp
src/core/hw/: gpu.cpp  gpu.h
src/core/loader/: loader.cpp  loader.h  ncch.cpp  smdh.cpp  smdh.h
src/video_core/: CMakeLists.txt  hwrasterizer_base.h  pica.h  utils.h
src/video_core/debug_utils/: debug_utils.cpp
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_rasterizer.h  gl_rasterizer_cache.cpp  gl_rasterizer_cache.h  gl_resource_manager.h  gl_shader_util.cpp  gl_shader_util.h  gl_state.cpp  gl_state.h  pica_to_gl.h  renderer_opengl.cpp  renderer_opengl.h
